# r34api-library

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/r34_api/: all.html  enum.Rating.html  index.html  sidebar-items.js  struct.Post.html  struct.R34JsonParser.html  struct.Request.html
doc/serde/ser/: struct.Impossible.html
doc/serde_json/: enum.Value.html  struct.Map.html  struct.Number.html
doc/serde_json/map/: struct.Map.html
doc/serde_json/value/: enum.Value.html  struct.Number.html
doc/src/itoa/: lib.rs.html  udiv128.rs.html
doc/src/r34_api/: lib.rs.html
doc/src/ryu/: common.rs.html  d2s.rs.html  d2s_full_table.rs.html  d2s_intrinsics.rs.html  digit_table.rs.html  f2s.rs.html  f2s_intrinsics.rs.html  lib.rs.html
doc/src/ryu/buffer/: mod.rs.html
doc/src/ryu/pretty/: exponent.rs.html  mantissa.rs.html  mod.rs.html
doc/src/serde/: integer128.rs.html  lib.rs.html  macros.rs.html
doc/src/serde/de/: format.rs.html  ignored_any.rs.html  impls.rs.html  mod.rs.html  seed.rs.html  size_hint.rs.html  value.rs.html
doc/src/serde/private/: de.rs.html  doc.rs.html  mod.rs.html  ser.rs.html
doc/src/serde/ser/: fmt.rs.html  impls.rs.html  impossible.rs.html  mod.rs.html
doc/src/serde_json/: de.rs.html  error.rs.html  iter.rs.html  lib.rs.html  macros.rs.html  map.rs.html  number.rs.html  read.rs.html  ser.rs.html
doc/src/serde_json/features_check/: mod.rs.html
doc/src/serde_json/io/: mod.rs.html
doc/src/serde_json/value/: de.rs.html  from.rs.html  (+4 more)
src/: lib.rs
(+31 files in other folders)
